k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: wishlist-app
    spec:
      containers:
        - name: wishlist-app-container
          image: ash2200/user-wishlist-k8s:v1
          ports:
          - containerPort: 80
  selector:
    matchLabels:
      component: wishlist-app
